tests/ui/lang-items/start_lang_item_args.main_ret.stderr
error[E0308]: lang item `start` function has wrong type
  --> $DIR/start_lang_item_args.rs:72:20
   |
LL | fn start<T>(_main: fn() -> u16, _argc: isize, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |          -         ^^^^^^^^^^^ expected type parameter `T`, found `u16`
   |          |
   |          expected this type parameter
   |
   = note: expected signature `fn(fn() -> T, _, _, _) -> _`
              found signature `fn(fn() -> u16, _, _, _) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
